fix(waybar): fixed extra margin on top of sway windows

--- a/private_dot_config/waybar/style.css
+++ b/private_dot_config/waybar/style.css
@@ -12,6 +12,7 @@ window#waybar {
 
 .modules-left, .modules-right, .modules-center {
   margin: 4px;
+  margin-bottom: 0px;
   border-radius: 4px;
   background-color: rgba(31, 31, 40, 0.90);
 }
